<resources>
    <string name="app_name">KoPintar</string>

    <string name="email">Email</string>
    <string name="email_error">Masukkan email dengan format yang benar</string>

    <string name="password">Kata Sandi</string>
    <string name="password_error">Masukkan kata sandi dengan minimal 8 karakter</string>

    <string name="start_button">Mulai</string>

    <string name="welcome_title">Selamat Datang ke Aplikasi %1$s</string>
    <string name="welcome_description">Deteksi dini penyakit tanaman kopi dan\ntingkatkan kualitas roast beans mu dengan AI</string>
    <string name="welcome_image">Gambar selamat datang</string>

    <string name="login">Masuk</string>
    <string name="login_image">Gambar masuk</string>
    <string name="login_title">Masuk</string>
    <string name="login_description">Silahkan isi datamu dulu ya</string>

    <string name="register">Daftar</string>

    <string name="username">Nama Pengguna</string>

</resources>